  related entities; definitions go in new entity.master element; there are
  new methods in EntityValue, EntityList, and EntityFind to get value Maps
  for the master record plus all details
- Various improvements to email message polling (calling EM-ECA rules)
  including support for Java System Properties pass through and fix for
  password pass through for IMAPS/etc
- Improved sending EmailTemplate with support for reply to and bounce
  addresses from EmailTemplate and CC/BCC addresses from both EmailTemplate
  and service parameters
- Localized strings may now contain a double hash (##) to specify context
  where a single word in the default language (ie English) is ambiguous; at
  runtime if no matching LocalizedMessage is found the text before the
  double hash will be used to lookup records or as the default value
- Added field.@create-only attribute, defaults to entity.@create-only
  value, create only now checked at field level on update (only at entity
  level on delete)
- All XML Form field widgets now support expanded tooltip
- Added json-schema for Entity REST API: for all entities get
  /rest/schema.json, for a single entity get /rest/schema/${name}.json
- Added RAML API definition for Entity REST API at /rest/schema.raml
- SystemMessage entity has additional fields to identify messages
- Changed receive#SystemMessage to an interface, now use
  receive#IncomingSystemMessage for remote calls, will call the
  SystemMessageType.receiveServiceName service if specified to save message
- Added EDI handler (parser and generator), examples in Mantle

Bug Fixes:

- Fixed issue in the Tools EntityDetail screen where entities with many
  dependents (like Enumeration, Uom, etc) caused an out of memory error;
  GitHub issue #149
- Fixed XML Actions FTL error for entity-find.@having-econditions
- Fixed issue where ResourceFacadeImpl.setInContext localized values when
  expanding; caused problems with set elements in widget-template-include