@@ -22,6 +22,7 @@ along with this software (see the LICENSE.md file). If not, see
 
     <service verb="poll" noun="EmailServer" authenticate="false" type="script" transaction-timeout="600"
              location="classpath://org/moqui/impl/pollEmailServer.groovy">
+        <!-- org.moqui.impl.EmailServices.poll#EmailServer -->
         <description>
             Poll an email server (IMAP or POP3) to receive messages. Each new message is processed using
             the Email-ECA rules. Messages are flagged as seen (if supported). Messages are deleted if the storeDelete
@@ -36,6 +37,7 @@ along with this software (see the LICENSE.md file). If not, see
     </service>
     
     <service verb="save" noun="EcaEmailMessage">
+        <!-- org.moqui.impl.EmailServices.save#EcaEmailMessage -->
         <implements service="org.moqui.EmailServices.process#EmailEca"/>
         <in-parameters>
             <parameter name="statusId" default-value="ES_RECEIVED"/>
@@ -52,9 +54,10 @@ along with this software (see the LICENSE.md file). If not, see
                     <return message="Found duplicate message with Message-ID [${messageId}] from server [${emailServerId}]"/></if>
             </if>
 
+            <set field="body" from="bodyPartList ? bodyPartList[0].contentText : null"/>
             <service-call name="create#moqui.basic.email.EmailMessage" out-map="context"
                 in-map="[sentDate:fields.sentDate, receivedDate:fields.receivedDate, statusId:statusId,
-                    subject:fields.subject, body:fields.bodyPartList?.getAt(0),
+                    subject:fields.subject, body:body,
                     fromAddress:fields.from, toAddresses:fields.toList?.toString(),
                     ccAddresses:fields.ccList?.toString(), bccAddresses:fields.bccList?.toString(),
                     messageId:messageId, emailServerId:emailServerId]"/>
