@@ -12,10 +12,10 @@ along with this software (see the LICENSE.md file). If not, see
 <http://creativecommons.org/publicdomain/zero/1.0/>.
 -->
 <emecas xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://moqui.org/xsd/email-eca-1.5.xsd">
-    <!-- NOTE: see org.moqui.EmailServices.process#EmailEca for fields derived from message, all available for conditions too -->
+    <!-- NOTE: see org.moqui.EmailServices.process#EmailEca interface for fields derived from message, all available for conditions too -->
     <emeca rule-name="SaveEcaEmailMessage">
         <!-- simple example condition: if message not seen and has a subject save it (note that if EmailServer.storeSkipSeen=Y seen are skipped anyway) -->
-        <condition><expression>!flags.seen &amp;&amp; fields.subject</expression></condition>
+        <condition><expression>fields.subject</expression></condition><!-- commented for easier testing: !flags.seen &amp;&amp; -->
         <actions><service-call name="org.moqui.impl.EmailServices.save#EcaEmailMessage" in-map="context"/></actions>
     </emeca>
 </emecas>
